--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^0.21.1",
     "pg": "^8.2.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.0.2",
+    "react-card-flip": "^1.1.3",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
